--- a/index.html
+++ b/index.html
@@ -17,7 +17,60 @@
 />
 
 
-<link rel="stylesheet" href="css/base.css">
+<style>
+    /* CRITICAL CSS – ABOVE THE FOLD ONLY */
+    * { margin:0; padding:0; box-sizing:border-box }
+    body{
+      font-family:system-ui,-apple-system,"Segoe UI",sans-serif;
+      background:#fff;
+      color:#1f2937;
+      line-height:1.6;
+      overflow-x:hidden;
+    }
+    header{
+      position:fixed;
+      top:0; left:0;
+      width:100%;
+      padding:18px 6vw;
+      background:#ffffffee;
+      backdrop-filter:blur(12px);
+      border-bottom:1px solid #e5e7eb;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      z-index:1000;
+    }
+    .logo{
+      font-size:34px;
+      font-weight:900;
+      color:#111827;
+      text-decoration:none;
+    }
+    .logo span{color:#f97316}
+    .services{
+      padding:120px 6vw 60px;
+      display:grid;
+      grid-template-columns:repeat(4,1fr);
+      gap:30px;
+    }
+    .service-card{
+      background:#ffffff;
+      border-radius:28px;
+      box-shadow:0 12px 32px rgba(0,0,0,0.08);
+      overflow:hidden;
+      height:520px;
+    }
+    .card-front img{
+      width:100%;
+      height:auto;
+      aspect-ratio:4/3;
+      object-fit:cover;
+      border-radius:16px;
+      margin-bottom:16px;
+    }
+  </style>
+<link rel="preload" href="css/base.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="css/base.css"></noscript>
 <link rel="stylesheet" href="css/desktop.css" media="(min-width:901px)">
 <link rel="stylesheet" href="css/mobile.css" media="(max-width:900px)">
 <script defer src="js/main.js"></script>
@@ -371,6 +424,7 @@ function flipCard(card) {
 
 </body>
 </html>
+
 
 
 
